# template-stm32f401-CMake

./: .mxproject  CMakeLists.txt  Makefile  README.MD  template-stm401.ioc
Core/Inc/: main.h
Core/Src/: main.c
USB_DEVICE/App/: usbd_cdc_if.c
template/: CMakeLists.txt  Makefile
